package filtros;

import domain.Hecho;

public interface FiltroHechos {

  boolean filtrar(Hecho hecho);

}
